CONFDEV-19257: fix layout broken IE, and feedback

--- a/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
+++ b/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
@@ -56,7 +56,7 @@
 
 #jira-chart-content div.jira-chart-search-input {
     display: inline-block;
-    width: 390px;
+    width: 380px;
 }
 
 #jira-chart-content #jira-chart-servers.select {
